--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "back",
   "version": "1.0.0",
   "description": "Site de gestion de stock d'outil",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "start:dev": "nodemon"
+    "start": "ts-node server.ts",
+    "start:dev": "npx nodemon"
   },
   "author": "Jean-Louis GUENEGO",
   "license": "ISC",
@@ -15,6 +15,9 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/node": "^14.14.35",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
