--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.5",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.35",
     "@types/serve-index": "^1.7.30",
     "nodemon": "^2.0.7",
