--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
+  "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "esModuleInterop": true
-  }
+    "rootDir": ".",
+    "outDir": "build",
+    "esModuleInterop": true,
+    "lib": ["ES2020"],
+    "target": "ES2020"
+  },
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
