--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Site de gestion de stock d'outil",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "ts-node server.ts",
     "start:dev": "npx nodemon",
     "lint": "gts lint",
@@ -24,10 +24,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
     "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.35",
     "@types/serve-index": "^1.7.30",
     "gts": "^3.1.0",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
