--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,13 @@
   "extends": "./node_modules/gts/",
   "rules": {
     "node/no-unsupported-features/node-builtins": "off",
-    "no-process-exit": "off"
+    "no-process-exit": "off",
+    "node/no-unpublished-import": [
+      "error",
+      {
+        "allowModules": ["node-fetch"]
+      }
+    ]
   },
   "env": {
     "mocha": true
