--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
   "author": "Jean-Louis GUENEGO",
   "license": "ISC",
   "dependencies": {
+    "debug": "^2.6.9",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
     "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.35",
+    "@types/node-fetch": "^2.5.8",
     "@types/serve-index": "^1.7.30",
     "gts": "^3.1.0",
     "mocha": "^8.3.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
