--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^2.6.9",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
