--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^2.6.9",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
